--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <div><img src="assets/img/logo-ssp-w-web.png" style="width: 70px;height: 70px;"></div>
             </a><button class="navbar-toggler navbar-toggler-right" data-bs-toggle="collapse" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button></div>
     </nav>
-    <header class="masthead" style="background: url(&quot;assets/img/intro-bg.jpg&quot;);">
-        <div class="intro-body" style="background: url(&quot;assets/img/intro-bg.jpg&quot;) round, url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;);">
+    <header class="masthead" style="background: url(&quot;assets/img/intro-bg.jpg&quot;);position: relative;width: 100%;height: 100%;background-size: cover;background-repeat: no-repeat;background-position: center;">
+        <div class="intro-body" style="width: 100%;height: 100%;">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
+                    <div class="col-lg-8 mx-auto" style="width: 100%;height: 100%;">
                         <p class="intro-text">www.steadyshotprod.com</p>
                         <h1 class="brand-heading" style="height: 185px;">under construction </h1>
                     </div>
