--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/untitled-1.css">
+    <link rel="stylesheet" href="assets/css/untitled-2.css">
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
-    <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
+    <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav" style="background: #00000000;border-color: #00000000;">
         <div class="container"><a class="navbar-brand" href="#" style="width: 70px;height: 70px;">
                 <div><img src="assets/img/logo-ssp-w-web.png" style="width: 70px;height: 70px;"></div>
-            </a><button class="navbar-toggler navbar-toggler-right" data-bs-toggle="collapse" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button></div>
+            </a></div>
     </nav>
-    <header class="masthead" style="background: url(&quot;assets/img/intro-bg.jpg&quot;);position: relative;width: 100%;height: 100%;background-size: cover;background-repeat: no-repeat;background-position: center;">
+    <header class="masthead" style="position: relative;width: 100%;height: 100%;background: url(&quot;assets/img/bg2.jpeg&quot;) center / cover no-repeat;backdrop-filter: blur(0px);-webkit-backdrop-filter: blur(0px);filter: saturate(47%);">
         <div class="intro-body" style="width: 100%;height: 100%;">
             <div class="container">
                 <div class="row">
